Closed Bug 684825 Opened 14 years ago Closed 14 years ago

ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr' trying to get experimental-webgl context with options

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Unassigned)

Details

(Keywords: assertion)

Attachments

(1 file)

nsHTMLCanvasElement::GetContext creates a hash property bag to convert its context options into an nsIProperties object. Unfortunately a hash property bag has inherits multiply from nsIProperties and the wrong one gets put in the second nsCOMPtr. (I'm not sure why it uses two nsCOMPtrs in the first place.)
I've been meaning to file this for some time, thanks for doing that.
Attached patch Proposed patchSplinter Review
Attachment #559410 - Flags: review?(jmuizelaar)
Comment on attachment 559410 [details] [diff] [review] Proposed patch Looks fine to me. Benoit should probably look, but I think it's fine for his review to come after landing.
Attachment #559410 - Flags: review?(jmuizelaar)
Attachment #559410 - Flags: review?(bjacob)
Attachment #559410 - Flags: review+
Pushed changeset cb79942d0feb to mozilla-central.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Sorry, I should have said changeset afe75f8431ad of course.
Comment on attachment 559410 [details] [diff] [review] Proposed patch I'm not a good reviewer for this code.
Attachment #559410 - Flags: review?(bjacob)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: