Bug 684825 Fix for ASSERTION: QueryInterface needed r=jmuizelaar